# twitter2

./: .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  TODO.md  docker-compose.yml
.sqlx/: query-0b0b952a38ced3530dcc2a783d745c5ae2162e77ade863eee0800cce80b4ba2c.json  query-11e113650d06251c6138a510c67ebdf0212c11ecc8bcc6362a232d0ba0ec7482.json  query-18340eacd21bbae21ff5e131519d77578f1a4b6dcab4b99e720740dbf85b7ef3.json  query-216d9b77770eb3fc879131fc22306ccd179498d12bacd94f4d120bc2080af7d1.json  query-24813699a33118de19e2b0fde9b5e14cab81749f003ecc5745b193b6a704821c.json  query-35738fef5f5c535dd8b37aea07fd91a8b33f33ad5a8ba611e4f6ffa89c12719f.json  query-37a40e2d38173bf419f676ee2a06e50d12bcbee820fb492269c73d23889fd2fb.json  query-397ec0882f6371d764da5106859d1716ad27d71707b2da436d49794f4c1097dd.json  query-42cd1a5d0a9a4d64fbb9eb01a60df259b43414cce223cdc39c88e1c2b8c7f1ed.json  query-4300a589c16da7d529bc98fd0393df4e0d10c7d0186e0ba6b85e33d819138caf.json  query-46293bc6b72acbf2fbd46cfeb5fbd38e165daa0be4f4c860f8ad12a330b20155.json  query-46ad894415334b4a26b44ae2245179dbc22142142d411b48c5938f6f709faf63.json  query-4bdc1f88caaa5f579f24654f102cb91b7d4cea3dfcd2957c480c364eb0351692.json  query-4c6d0b9fe562d031473209f373f9866894ae91de2dad4a60356d22e978cde8b9.json  query-4d2c5f79602ce4dbe5996c6712e96720fcf5d626105637df012cd54688d0349a.json  query-58a1e4790f1ac308bddffc2f7f962054bb8c72b5c916b592dc3f13aaae71cf5c.json  query-5e7f78b149dc36e43be13b31bff7d8d3e9825e6d9f0c969071f171deacb80820.json  query-61e8fe7c988c094f5efe041bd9716987b3b930493db78df9ac3c77bd958ad92f.json  (+26 more)
migrations/: 20241007175013_create_posts_table.sql  (+27 more)
(+21 files in other folders)
